src/test/ui/macros/macro-expanded-include/test.rs
// ignore-emscripten no asm! support
// compile-pass
#![feature(asm)]
#![allow(unused)]

#[macro_use]
mod foo;

m!();
fn f() { n!(); }


fn main() {}
